@@ -3,6 +3,8 @@ Changelog
 
 1.6.dev0 - (unreleased)
 -----------------------
+* Feature: add configuration and utilities for RabbitMQ client
+  [GhitaB refs #91506]
 * Change: updated URLs pointing to eea.europa.eu with https://
   [alecghica refs #95849]
 
